5.2/en/32-rabbitmq.rst
Using RabbitMQ as a Message Broker 
================================== 
 
.. index:: 
    single: RabbitMQ 
 
RabbitMQ is a very popular message broker that you can use as an alternative to PostgreSQL. 
 
Switching from PostgreSQL to RabbitMQ 
------------------------------------- 
 
To use RabbitMQ instead of PostgreSQL as a message broker: 
 
.. code-block:: diff 
    :caption: patch_file 
 
    --- a/config/packages/messenger.yaml 
    +++ b/config/packages/messenger.yaml 
    @@ -6,7 +6,7 @@ framework: 
             transports: 
                 # https://symfony.com/doc/current/messenger.html#transport-configuration 
                 async: 
    -                dsn: '%env(MESSENGER_TRANSPORT_DSN)%' 
    +                dsn: '%env(RABBITMQ_URL)%' 
                     options: 
                         auto_setup: false 
                         use_notify: true 
 
Adding RabbitMQ to the Docker Stack 
----------------------------------- 
 
.. index:: 
    single: Docker;RabbitMQ 
 
As you might have guessed, we also need to add RabbitMQ to the Docker Compose stack: 
 
.. code-block:: diff 
    :caption: patch_file 
 
    --- a/docker-compose.yaml 
    +++ b/docker-compose.yaml 
    @@ -21,3 +21,7 @@ services: 
         redis: 
             image: redis:5-alpine 
             ports: [6379] 
    + 
    +    rabbitmq: 
    +        image: rabbitmq:3.7-management 
    +        ports: [5672, 15672] 
 
Restarting Docker Services 
-------------------------- 
 
To force Docker Compose to take the RabbitMQ container into account, stop the containers and restart them: 
 
.. code-block:: bash 
 
    $ docker-compose stop 
    $ docker-compose up -d 
 
.. code-block:: bash 
    :class: hide 
 
    $ sleep 10 
 
Exploring the RabbitMQ Web Management Interface 
----------------------------------------------- 
 
.. index:: 
    single: Symfony CLI;open:local:rabbitmq 
 
If you want to see queues and messages flowing through RabbitMQ, open its web management interface: 
 
.. code-block:: bash 
    :class: ignore 
 
    $ symfony open:local:rabbitmq 
 
Or from the web debug toolbar: 
 
.. figure:: screenshots/rabbitmq-wdt.png 
    :alt: / 
    :align: center 
    :figclass: with-browser 
 
Use ``guest``/``guest`` to login to the RabbitMQ management UI: 
 
.. figure:: screenshots/rabbitmq-management.png 
    :alt: / 
    :align: center 
    :figclass: with-browser 
 
Deploying RabbitMQ 
------------------ 
 
.. index:: 
    single: SymfonyCloud;RabbitMQ 
    single: RabbitMQ 
 
Adding RabbitMQ to the production servers can be done by adding it to the list of services: 
 
.. code-block:: diff 
    :caption: patch_file 
 
    --- a/.symfony/services.yaml 
    +++ b/.symfony/services.yaml 
    @@ -18,3 +18,8 @@ files: 
 
     rediscache: 
         type: redis:5.0 
    + 
    +queue: 
    +    type: rabbitmq:3.7 
    +    disk: 1024 
    +    size: S 
 
Reference it in the web container configuration as well and enable the ``amqp`` PHP extension: 
 
.. code-block:: diff 
    :caption: patch_file 
 
    --- a/.symfony.cloud.yaml 
    +++ b/.symfony.cloud.yaml 
    @@ -4,6 +4,7 @@ type: php:8.0 
 
     runtime: 
         extensions: 
    +        - amqp 
             - redis 
             - blackfire 
             - xsl 
    @@ -28,6 +29,7 @@ disk: 512 
     relationships: 
         database: "db:postgresql" 
         redis: "rediscache:redis" 
    +    rabbitmq: "queue:rabbitmq" 
 
     web: 
         locations: 
 
.. index:: 
    single: SymfonyCloud;Tunnel 
    single: Symfony CLI;tunnel:open 
    single: Symfony CLI;tunnel:close 
    single: Symfony CLI;open:remote:rabbitmq 
 
When the RabbitMQ service is installed on a project, you can access its web management interface by opening the tunnel first: 
 
.. code-block:: bash 
    :class: ignore 
 
    $ symfony tunnel:open 
    $ symfony open:remote:rabbitmq 
 
    # when done 
    $ symfony tunnel:close 
 
.. sidebar:: Going Further 
 
    * `RabbitMQ docs <https://www.rabbitmq.com/documentation.html>`_. 
